few rounds of performance improvements